# tape_recognition_opencv

./: CMakeLists.txt  README.md  compile.sh  main.cpp  recognition.hpp
includes/: recognition.hpp
src/: recognition.cpp
